--- a/style.css
+++ b/style.css
@@ -135,11 +135,11 @@ footer {
 
 @media ( width < 650px){
     .main {
-        width: 450px;
+        width: 100vw;
     }
 
     .title{
-       font-size: 24px;
+       font-size: 22px;
     }
 
     
@@ -148,13 +148,13 @@ footer {
 }
 
 
-@media ( width < 520px){
+@media ( width < 550px){
     .main {
-        width: 350px;
+        width: 100vw;
     }
 
     .title{
-       font-size: 22px;
+       font-size: 20px;
     }
 
     
@@ -166,3 +166,4 @@ footer {
     font-size: 20px;
 }
 }
+
